# portfoliov1

./: .dockerignore  .gitignore  .pages.yml  CLAUDE.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  Dockerfile  FLYIO_DEPLOYMENT_GUIDE.md  README.md  astro.config.mjs  fly.toml  opencode.json  package-lock.json  package.json  summary_of_me.md  todo.md  tsconfig.json  wrangler.jsonc
.astro/: content-assets.mjs  content.d.ts  data-store.json  settings.json  types.d.ts
backend/: Cargo.toml
backend/src/: db.rs  main.rs
backend/src/api_handlers/: admin.rs  chat.rs  contact.rs  knowledge.rs  mod.rs  projects.rs
d1/: schema.sql
journal/: march02_2026.md
src/: env.d.ts
src/components/: AIChat.tsx  Hero.astro
src/components/blog/: BlogCard1.astro  BlogCard2.astro
src/components/chat/: ChatInterface.tsx  EducationCard.tsx  ProjectCard.tsx  SkillGrid.tsx  tambo-config.ts
src/components/fundations/containers/: Wrapper.astro
src/components/fundations/elements/: Text.astro
src/components/fundations/head/: BaseHead.astro
src/components/global/: Footer.astro  Navigation.astro  Search.astro
src/components/global/navigation/: Navigation.astro
src/content/: config.ts
src/data/: projects.json
src/layouts/: BaseLayout.astro
src/pages/: chat.astro  contact.astro  index.astro  projects.astro  resume.astro
src/pages/admin/: dashboard.astro  index.astro
src/pages/api/: chat.ts  contact.ts
src/pages/api/admin/: login.ts
src/pages/api/knowledge/: search.ts
src/pages/api/projects/: [id].ts  (+1 more)
src/pages/case-study/: promptpseudjs.astro
src/styles/: global.css
(+2 files in other folders)
