[package]
name = "josh-portfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0" }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-gzip", "cors"] }
tracing = "0.1.40"
serde_json = "1.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
tracing-subscriber = "0.3.22"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
